# ShadoNet

./: Gen_refactored.py  README-3.md  README.md  RELEASE_NOTES.md  eval_fcn_cell_class.py  eval_fcn_cell_class.sh  pyproject.toml  requirements.txt  train_fcn_cell_class.py  train_fcn_cell_class.sh
nureg/: __init__.py  torch_utils.py  transforms.py  util.py
nureg/tools/: analysis_util.py  evaluationclass.py  util.py
